--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,27 @@ body{
     font-family: 'Poppins', sans-serif;
     background-color: #000;
     overflow-x: hidden;
-
-    /* box-sizing: border-box; */
+    scroll-snap-type: mandatory;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    position: relative;
 }
-/* 
-.container{
-    width: 100vw;
-    height: 100vh;
-    position: relative; 
-    background-color: #060C2D;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: -2;
-} */
+
+.section{
+    scroll-snap-align: start;
+}
+
+::-webkit-scrollbar{
+    width: 15px;
+}
+
+::-webkit-scrollbar-track{
+    background-color: #171750;
+}
+
+::-webkit-scrollbar-thumb{
+    background-image: linear-gradient(45deg, #06DEE1, #79FF6C);
+}
 
 .container{
     display: flex;
@@ -165,13 +172,47 @@ h2{
 
 /* ######################################################## SIDEBAR ####################################################### */
 /* ######################################################## SIDEBAR ####################################################### */
+.sidebar-1-code-popup, .sidebar-2-code-popup{
+    position: fixed;
+    top: 10%;
+    bottom: 10%;
+    right: 10%;
+    left: 10%;
+    /* overflow-y: auto; */
+    background-color: rgba(29, 30, 34, 0.5);
+    color: white;
+    z-index: 10;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+    transform: scale(0);
+    transition: 250ms linear;
+}
+
+.sidebar-1-head,.sidebar-2-head{
+    text-align: center;
+}
+
+.sidebar-1-btn,.sidebar-2-btn{
+    padding: 10px 30px;
+    margin-top: 5px;
+    background-color: rgb(252, 147, 243);
+    color: black;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 700;
+    cursor: pointer;
+}
 
 .sidebar-1{
-    height: 100vh;
+    height: 80vh;
     width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    scroll-snap-align: start;
 }
 
 .side-1 li {
@@ -219,15 +260,103 @@ h2{
     transform: translate(10px, -10px);
 }
 
+.html{
+    height: 93%;
+    width: 100%;
+    overflow: auto;
+    background-color: #1A1B1F;
+    text-align: start;
+    color: #A7925A;
+    font-size: 16px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.html > p, .css > p{
+    text-align: center;
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 500;
+    margin: 0;
+}
+
+.css{
+    position: relative;
+    width: 100%;
+    height: 93%;
+    /* overflow-x: hidden; */
+    overflow: auto;
+    background-color: #1A1B1F;
+    font-size: 16px;
+    color: #A7925A;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.css > xmp{
+    width: 100%;
+}
+
+.overlay{
+    position: fixed;
+    pointer-events: all;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #333642;
+    z-index: 9;
+    overflow: hidden;
+    transform: scale(0);
+    transition: 250ms linear;
+}
+
+.overlay > i{
+    color: #FFF;
+    font-size: 30px;
+    margin: 10px;
+    padding: 15px;
+    float: right;
+    background-color: red;
+}
+
+.copyBtnCSS, .copyBtnHTML{
+    background-color: #3498DB;
+    padding: 5px;
+    border: none;
+    font-size: 20px;
+    float: right;
+    margin-right: 25px;
+}
+
+.copyBtnCSS:hover, .copyBtnHTML:hover{
+    background-color: rgb(71, 158, 216);
+}
+
+.alertCSS, .alertHTML{
+    font-size: 16px;
+    margin-left: 10px;
+    background-color: #28A745;
+    color: white;
+    padding: 5px;
+    font-weight: 400;
+    position: absolute;
+    top: 0;
+    transform: translateX(500%) scale(0);
+    transition: 100ms linear;
+}
+
 /* ######################################################### SIDEBAR 2 ############################################### */
 /* ######################################################### SIDEBAR 2 ############################################### */
 
 .sidebar-2{
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    scroll-snap-align: start;
 }
 
 .sidebar-2 > .side-2 {
@@ -292,4 +421,49 @@ h2{
 .sidebar-2 > .side-2 > li > a:hover::after{
     transform: translateX(0);
     opacity: 1;
+}
+
+
+
+/* ##################################################### MEDIA QUERIES ################################################## */
+/* ##################################################### MEDIA QUERIES ################################################## */
+
+@media (max-width: 700px)
+{
+
+    body{
+        margin: 10px;
+    }
+
+    ::-webkit-scrollbar{
+        width: 8px;
+    }
+
+    .buttons-hover > a
+    {
+        margin: 10px;
+        padding: 5px 20px;
+    }
+
+    .neon > a{
+        margin: 20px;
+        padding: 8px 20px;
+    }
+
+    h2{
+        font-size: 2.5em;
+    }
+
+    .side-1 > li > a{
+        font-size: 3em;
+    }
+
+    .html , .css{
+        font-size: 8px;
+    }
+
+    .overlay > i{
+        font-size: 24px;
+        padding: 10px   ;
+    }
 }
